# retuve

./: .gitignore  CITATION.cff  CONTRIBUTOR.md  DATA_DISCLAIMER.md  Dockerfile  LICENSE  README.md  SECURITY.md  codecov.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: gh-pages.yml  release.yml  test.yml
changenotes/: 2024-11-07_initial-results.yaml  2024-11-17_graf-algo.yaml  2024-11-30_testdata-overhaul.yaml  2025-07-18_xray-v2.yaml  2025-08-11_apex-positioning-bug.yaml
docs/modalities/: ultrasound.md  xray.md
docs/overviews/: for_ai_researchers.md  for_clinicians.md  for_developers.md
docs/usecases/: 001-bringing-own-dicoms-xray.md  002-using-retuve-trak.md  003-bringing-own-dicoms-ultrasound.md
examples/: README.md  _test.py
examples/ai_plugins/: custom_ai_and_config.py
examples/high_level_functions/: 2dus.py  2dus_sweep.py  3dus.py  xray.py
examples/ultrasound/: ai_with_dicom.py  ai_with_jpeg_2d.py  ai_with_multiple_scans.py
examples/x-ray/: ai_with_dicom.py  ai_with_jpeg.py  ai_with_multiple_jpgs.py
retuve/: __init__.py  __main__.py  batch.py  draw.py  funcs.py  testdata.py  typehints.py  utils.py
retuve/app/: __init__.py  classes.py  helpers.py  utils.py
retuve/app/routes/: __init__.py  api.py  live.py  models.py  ui.py
retuve/app/static/: download.html  index.html  live.html  main.css  main.html  upload.html
retuve/classes/: __init__.py  draw.py  general.py  metrics.py  seg.py
retuve/defaults/: __init__.py  config.py  hip_configs.py  manual_seg.py
retuve/docs/: __init__.py
retuve/docs/modalities/: __init__.py  ultrasound.py  xray.py
retuve/docs/overviews/: __init__.py  ai_researchers.py  clinicians.py  developers.py
retuve/docs/usecases/: 001-bringing-own-dicoms-xray.py  002-using-retuve-trak.py  003-bringing-own-dicoms-ultrasound.py  __init__.py
retuve/hip_us/: __init__.py  draw.py  typing.py
retuve/hip_us/classes/: __init__.py  dev.py  enums.py  general.py
retuve/hip_us/handlers/: __init__.py  bad_data.py  segs.py  side.py
retuve/hip_us/metrics/: __init__.py  aca.py  alpha.py  c_ratio.py  coverage.py  curvature.py  dev.py
retuve/hip_us/modes/: __init__.py  landmarks.py  seg.py
retuve/hip_us/multiframe/: __init__.py  graf.py  main.py  models.py
retuve/hip_xray/: __init__.py  classes.py  draw.py  landmarks.py  utils.py
retuve/hip_xray/metrics/: ace.py  ihdi.py  tonnis.py  wiberg.py
retuve/keyphrases/: __init__.py  config.py  enums.py  subconfig.py
retuve/logs/: __init__.py
retuve/trak/: __init__.py  data.py  main.py
tests/: .gitignore  __init__.py  _download_plugins.py  _get_test_data.py  conftest.py
tests/fixtures/: intergration.py  unit.py
tests/intergration/: test_defaults.py  test_funcs.py
tests/unit/: test_utils.py
tests/unit/classes/: test_overlay.py  test_seg.py
tests/unit/hip_us/: test_draw.py
tests/unit/hip_us/handlers/: test_bad_data.py  test_segs.py  test_side.py
tests/unit/hip_us/metrics/: test_aca.py  test_alpha.py  test_cov.py  test_cr.py  test_curv.py  test_dev.py
tests/unit/hip_us/modes/: test_landmarks.py  test_seg_mode.py
tests/unit/hip_us/multiframe/: test_models.py  test_multiframe.py
tests/unit/hip_xray/: test_landmarks_xray.py
tests/unit/hip_xray/metrics/: test_ace.py  test_ihdi.py  test_tonnis.py  test_wiberg.py
tests/unit/trak/: test_data.py
tools/: licence.py  license.py
